--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  <script src="/js/jquery-3.5.1.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Pizza Parlor</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Pizza Parlor</h1>
+
+  </div>
   
 </body>
 </html>
