--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <script src="/js/jquery-3.5.1.js"></script>
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   <script src="js/scripts.js"></script>
   <title>Pizza Parlor</title>
 </head>
 
 <body>
   <div class="container">
-    <img src="img/pizza.jpg" alt="A photo of a cute pizza slice.">
+    <div class="row">
+      <!-- <ion-icon name="pizza-outline" size="extralarge"></ion-icon> -->
+      <div class="col-3">
+        <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>DELIVERY
+      </div>
+      <div class="col-3">
+      </div>
+      <div class="col-3">
+        <ion-icon name="car-outline" size="extralarge"></ion-icon>CARRYOUT
+      </div>
+ 
+    </div>
+    <!-- <img src="img/pizza.jpg" alt="A photo of a cute pizza slice."> -->
     <h1>Pizza Parlor</h1>
     <div class="jumbotron">
 
