--- a/index.html
+++ b/index.html
@@ -14,21 +14,102 @@
 
 <body>
   <div class="container">
-    <div class="row">
-      <!-- <ion-icon name="pizza-outline" size="extralarge"></ion-icon> -->
-      <div class="col-3">
-        <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>DELIVERY
-      </div>
-      <div class="col-3">
-      </div>
-      <div class="col-3">
-        <ion-icon name="car-outline" size="extralarge"></ion-icon>CARRYOUT
-      </div>
- 
-    </div>
     <!-- <img src="img/pizza.jpg" alt="A photo of a cute pizza slice."> -->
     <h1>Pizza Parlor</h1>
-    <div class="jumbotron">
+    <div class="row">
+      <!-- <ion-icon name="pizza-outline" size="extralarge"></ion-icon> -->
+      <div class="col-5" id="carryout">
+        <ion-icon name="car-outline" size="extralarge"></ion-icon>CARRYOUT
+      </div>
+
+      <div class="col-2">
+        <p>- OR -</p>
+      </div>
+      <div class="col-5" id="delivery">
+        <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>DELIVERY
+      </div>
+
+
+    </div>
+
+
+    <div id="addressBlock">
+      <form id="address">
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" required class="form-control" id="inputAddress" placeholder="Enter Street">
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="City">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <select id="inputState" class="form-control">
+              <option selected>Choose...</option>
+              <option>Alabama - AL</option>
+              <option>Alaska - AK</option>
+              <option>Arizona - AZ</option>
+              <option>Arkansas - AR</option>
+              <option>California - CA</option>
+              <option>Colorado - CO</option>
+              <option>Connecticut - CT</option>
+              <option>Delaware - DE</option>
+              <option>Florida - FL</option>
+              <option>Georgia - GA</option>
+              <option>Hawaii - HI</option>
+              <option>Idaho - ID</option>
+              <option>Illinois - IL</option>
+              <option>Indiana - IN</option>
+              <option>Iowa - IA</option>
+              <option>Kansas - KS</option>
+              <option>Kentucky - KY</option>
+              <option>Louisiana - LA</option>
+              <option>Maine - ME</option>
+              <option>Maryland - MD</option>
+              <option>Massachusetts - MA</option>
+              <option>Michigan - MI</option>
+              <option>Minnesota - MN</option>
+              <option>Mississippi - MS</option>
+              <option>Missouri - MO</option>
+              <option>Montana - MT</option>
+              <option>Nebraska - NE</option>
+              <option>Nevada - NV</option>
+              <option>New Hampshire - NH</option>
+              <option>New Jersey - NJ</option>
+              <option>New Mexico - NM</option>
+              <option>New York - NY</option>
+              <option>North Carolina - NC</option>
+              <option>North Dakota - ND</option>
+              <option>Ohio - OH</option>
+              <option>Oklahoma - OK</option>
+              <option>Oregon - OR</option>
+              <option>Pennsylvania - PA</option>
+              <option>Rhode Island - RI</option>
+              <option>South Carolina - SC</option>
+              <option>South Dakota - SD</option>
+              <option>Tennessee - TN</option>
+              <option>Texas - TX</option>
+              <option>Utah - UT</option>
+              <option>Vermont - VT</option>
+              <option>Virginia - VA</option>
+              <option>Washington - WA</option>
+              <option>West Virginia - WV</option>
+              <option>Wisconsin - WI</option>
+              <option>Wyoming - WY</option>
+            </select>
+          </div>
+          <div class="form-group col-md-2">
+            <label for="inputZip">Zip</label>
+            <input type="text" required class="form-control" id="inputZip" placeholder="ZIP">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">CONTINUE FOR DELIVERY</button>
+      </form>
+
+    </div>
+    <div class="jumbotron hide">
 
       <h2 id="anim">Choose your pizza size and toppings!</h2>
       <form id="formOne" name="pizzaOrder">
