--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
   <div class="container">
     <!-- <img src="img/pizza.jpg" alt="A photo of a cute pizza slice."> -->
     <h1>Pizza Parlor</h1>
-    <div class="row">
-      <!-- <ion-icon name="pizza-outline" size="extralarge"></ion-icon> -->
-      <div class="col-5" id="carryout">
-        <ion-icon name="car-outline" size="extralarge"></ion-icon>CARRYOUT
-      </div>
-
-      <div class="col-2">
-        <p>- OR -</p>
-      </div>
-      <div class="col-5" id="delivery">
-        <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>DELIVERY
-      </div>
-
-
-    </div>
 
 
     <div id="addressBlock">
+      <div class="row">
+        <!-- <ion-icon name="pizza-outline" size="extralarge"></ion-icon> -->
+        <div class="col-5" id="delivery">
+          <ion-icon name="car-outline" size="extralarge"></ion-icon>DELIVERY
+        </div>
+        <div class="col-2">
+          <p>- OR -</p>
+        </div>
+        <div class="col-5" id="carryout">
+          <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>CARRYOUT
+        </div>
+      </div>
       <form id="address">
+        <div class="form-group">
+          <label for="customerName">Name</label>
+          <input type="text" required class="form-control" id="customerName" required
+            placeholder="Enter First & Last Name">
+        </div>
         <div class="form-group">
           <label for="inputAddress">Address</label>
           <input type="text" required class="form-control" id="inputAddress" placeholder="Enter Street">
@@ -42,7 +44,7 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="City">
+            <input type="text" class="form-control" id="inputCity" placeholder="City">
           </div>
           <div class="form-group col-md-4">
             <label for="inputState">State</label>
@@ -113,11 +115,6 @@
 
       <h2 id="anim">Choose your pizza size and toppings!</h2>
       <form id="formOne" name="pizzaOrder">
-        <div class="field">
-          <label for="cusName">Name</label>
-          <input id="cusName" required type="string">
-        </div>
-        <br>
         <label>Choose Your Pizza Size</label>
         <select class="pizzaSize form-control">
           <option value="Small">Small ($10)</option>
