--- a/index.html
+++ b/index.html
@@ -14,25 +14,24 @@
 
 <body>
   <div class="container">
-    <!-- <img src="img/pizza.jpg" alt="A photo of a cute pizza slice."> -->
     <h1>Pizza Parlor</h1>
-
-
-    <div id="addressBlock">
+    <div id="iconBlock" class="jumbotron iconBlock2">
       <div class="row">
-        <!-- <ion-icon name="pizza-outline" size="extralarge"></ion-icon> -->
         <div class="col-5" id="delivery">
-          <ion-icon name="car-outline" size="extralarge"></ion-icon>DELIVERY
+          <ion-icon name="car-outline" size="extralarge"></ion-icon>
+          <p class="center">Delivery</p>
         </div>
         <div class="col-2">
-          <p>- OR -</p>
+          <p class="vertAlign">- OR -</p>
         </div>
         <div class="col-5" id="carryout">
-          <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>CARRYOUT
+          <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>
+          <p class="center">Carryout</p>
         </div>
       </div>
-      <form id="address">
+      <form id="deliveryForm">
         <div class="form-group">
+          <br><br>
           <label for="customerName">Name</label>
           <input type="text" class="form-control" id="customerName" required placeholder="Enter First & Last Name">
         </div>
@@ -106,15 +105,25 @@
             <input type="text" required class="form-control" id="inputZip" placeholder="ZIP">
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">CONTINUE FOR DELIVERY</button>
+        <button type="submit" id="deliveryOption" class="btn btn-primary">CONTINUE FOR DELIVERY</button>
       </form>
 
+      <form id="carryOutForm">
+        <br><br>
+        <div class="form-group">
+          <label for="customerName2">Name</label>
+          <input type="text" class="form-control" id="customerName2" required placeholder="Enter First & Last Name">
+        </div>
+        <button type="submit" id="carryOutOption" class="btn btn-primary">CONTINUE TO CARRYOUT</button>
+      </form>
     </div>
-    <div class="jumbotron hide">
 
+    <div class="jumbotron pizzaOrderBlock">
       <h2 id="anim">Choose your pizza size and toppings!</h2>
-      <form id="formOne" name="pizzaOrder">
-        <label>Choose Your Pizza Size</label>
+      <br><br><br>
+      <img src="img/pizza.jpg" alt="A photo of a cute pizza slice">   
+      <form id="pizzaOrderForm" name="pizzaOrder">
+        <label class="labelWt">Choose Your Pizza Size</label>
         <select class="pizzaSize form-control">
           <option value="Small">Small ($10)</option>
           <option value="Medium">Medium ($12)</option>
@@ -122,82 +131,86 @@
           <option value="ExtraLarge">Extra Large ($16)</option>
         </select>
         <div class="form-group">
-          <label>Choose Your Toppings ($2 each)</label>
+          <br><br>
+          <label class="labelWt">Choose Your Toppings ($2 each)</label>
           <div class="checkbox">
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Mushrooms">Mushrooms
+              <input type="checkbox" name="pizzaTopping" value="Mushrooms">&nbsp;Mushrooms
             </label>
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Kosher Meat">Kosher Meat
+              <input type="checkbox" name="pizzaTopping" value="Kosher Meat">&nbsp;Kosher Meat
             </label>
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Onions">Onions
+              <input type="checkbox" name="pizzaTopping" value="Onions">&nbsp;Onions
             </label>
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Sausage">Sausage
+              <input type="checkbox" name="pizzaTopping" value="Sausage">&nbsp;Sausage
             </label>
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Bacon">Bacon
+              <input type="checkbox" name="pizzaTopping" value="Bacon">&nbsp;Bacon
             </label>
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Green Peppers">Green Peppers
+              <input type="checkbox" name="pizzaTopping" value="Green Peppers">&nbsp;Green Peppers
             </label>
             <label>
-              <input type="checkbox" name="pizzaTopping" value="Black Peppers">Black Peppers
+              <input type="checkbox" name="pizzaTopping" value="Black Peppers">&nbsp;Black Peppers
             </label>
           </div>
-
+          <br><br>
           <button type="submit" id="submit" class="btn btn-success">Submit</button>
-          <button type="submit" id="restart" class="btn btn-danger">Refresh</button>
         </div>
       </form>
     </div>
 
-    <blockquote class="blockquote">
-      <div id="showPrice">
-
-        <ul>
-          <!-- <li>Pizza Cost: <span class="blueColor"><span id="totalAmount"></span></span></li> -->
-          <!-- <div id="showToppings">
-            <li>Toppings are ...</li>
-            <ol id="toppings">
-            </ol>
-          </div> -->
-
+    <div class="jumbotron cartView">
+      <h2><span id = "cName"></span>, your Cart items are ...<br></h2>
+      <div class="bottomLine">
+        <ul id="cart">
+          <li><span id="mainLine"></span></li>
         </ul>
-      </div>
-
-
-    </blockquote>
-
-    <div class="finalDisplay">
-      <h2 class="head"><span id="cName"></span>, thank you for your order!</h2>
-      <div id="finalPage">
-        <h1>Order # <span class="blueColor"><span id="orderNumber"></span></span>.</h1>
-        <h2>Your Order details are ...
-        </h2>
       </div>
       <div class="row">
-        <div class="col-5">
-          <ul id="cart" class="colorRed">
-            <li><span id="mainLine"></span></li>
-          </ul>
+        <div class="col-5 bold">
+          <p>Total Cost</p>
+          <p class="hideDelivery">Delivery Address</p>
+        </div>
+        <div class="col-7">
+          <p><span id="totalCost"></span></p>
+          <p><span id="deliveryAddress"></span></p>
         </div>
       </div>
-      <div id="showAddress">
-        <ul>
-          <li>Delivery Address: <span class="blueColor"> <span id="deliveryAddress"></span> </span> </li>
-          <li>Approximate Delivery Time: <span class="blueColor"><span id="approximatedTime"></span></span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="morePizzaOrNot">
       <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Order another
         Pizza?</button>
       <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
+    </div>
 
+    <div class="jumbotron finalView">
+      <h2><span id = "cName1"></span>, thank you for your Order!<br></h2>
+      <div class="bottomLine">
+        <ul id="cart1">
+          <li><span id="mainLine1"></span></li>
+        </ul>
+      </div>
+      <div class="row">
+        <div class="col-5 bold">
+          <p>Total Cost</p>
+          <p class="hideDelivery">Delivery Address</p>
+          <p>Order Number</p>
+          <p class="hideDelivery">Approximate Delivery Time</span></p>
+        </div>
+        <div class="col-7">
+          <p><span id="totalCost1"></span></p>
+          <p><span id="deliveryAddress1"></span></p>
+          <p><span id="orderNum"></span></p>
+          <p class="hideDelivery"><span id="deliveryTime"></span></p>
+        </div>
+    </div>
+    <div id="refresh">
+      <br><br>
+      <button type="submit" id="restart" class="btn btn-success">Start Over</button>
     </div>
   </div>
+
 </body>
 
 </html>
