Fix all functional bugs

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
           <button type="submit" id="submit" class="btn btn-success">Submit</button>
         </div>
       </form>
+      <div class="aTag">
+        <a href="./index.html" id="aTag">Go Back to Landing Page</a>
+      </div>
     </div>
 
     <div class="jumbotron cartView">
@@ -182,6 +185,9 @@
       <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Order another
         Pizza?</button>
       <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
+      <div class="aTag">
+        <a href="./index.html" id="aTag">Go Back to Landing Page</a>
+      </div>
     </div>
 
     <div class="jumbotron finalView">
@@ -205,9 +211,8 @@
           <p class="hideDelivery"><span id="deliveryTime"></span></p>
         </div>
     </div>
-    <div id="refresh">
-      <br><br>
-      <button type="submit" id="restart" class="btn btn-success">Start Over</button>
+    <div class="aTag">
+      <a href="./index.html" id="aTag">Go Back to Landing Page</a>
     </div>
   </div>
 
