--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
     <div id="iconBlock" class="jumbotron iconBlock2">
       <div class="row">
         <div class="col-5" id="delivery">
-          <ion-icon name="car-outline" size="extralarge"></ion-icon>
+          <img src="img/car-sport-outline.svg" alt="Delivery SVG Icon" class="imgClass">
+          <!-- <ion-icon name="car-outline" size="extralarge"></ion-icon> -->
           <p class="center">Delivery</p>
         </div>
         <div class="col-2">
           <p class="vertAlign">- OR -</p>
         </div>
         <div class="col-5" id="carryout">
-          <ion-icon name="fast-food-outline" size="extralarge"></ion-icon>
+          <img src="img/fast-food-outline.svg" alt="CarryOut SVG Icon" class="imgClass">
+          <!-- <ion-icon name="fast-food-outline" size="extralarge"></ion-icon> -->
           <p class="center">Carryout</p>
         </div>
       </div>
@@ -121,7 +123,7 @@
     <div class="jumbotron pizzaOrderBlock">
       <h2 id="anim">Choose your pizza size and toppings!</h2>
       <br><br><br>
-      <img src="img/pizza.jpg" alt="A photo of a cute pizza slice">   
+      <img src="img/pizza.jpg" alt="A photo of a cute pizza slice" class="imgPizza">   
       <form id="pizzaOrderForm" name="pizzaOrder">
         <label class="labelWt">Choose Your Pizza Size</label>
         <select class="pizzaSize form-control">
