Fix errors reported by HTML checker

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="jumbotron pizzaOrderBlock">
       <h2 id="anim">Choose your pizza size and toppings!</h2>
       <br><br><br>
-      <img src="img/pizza.jpg" alt="A photo of a cute pizza slice" class="imgPizza">   
+      <img src="img/pizza.jpg" alt="A photo of a cute pizza slice" class="imgPizza">
       <form id="pizzaOrderForm" name="pizzaOrder">
         <label class="labelWt">Choose Your Pizza Size</label>
         <select class="pizzaSize form-control">
@@ -160,12 +160,12 @@
         </div>
       </form>
       <div class="aTag">
-        <a href="./index.html" id="aTag">Go Back to Landing Page</a>
+        <a href="./index.html" class="aTag">Go Back to Landing Page</a>
       </div>
     </div>
 
     <div class="jumbotron cartView">
-      <h2><span id = "cName"></span>, your Cart items are ...<br></h2>
+      <h2><span id="cName"></span>, your Cart items are ...<br></h2>
       <div class="bottomLine">
         <ul id="cart">
           <li><span id="mainLine"></span></li>
@@ -181,16 +181,15 @@
           <p><span id="deliveryAddress"></span></p>
         </div>
       </div>
-      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Order another
-        Pizza?</button>
+      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Order another Pizza?</button>
       <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
       <div class="aTag">
-        <a href="./index.html" id="aTag">Go Back to Landing Page</a>
+        <a href="./index.html" class="aTag">Go Back to Landing Page</a>
       </div>
     </div>
 
     <div class="jumbotron finalView">
-      <h2><span id = "cName1"></span>, thank you for your Order!<br></h2>
+      <h2><span id="cName1"></span>, thank you for your Order!<br></h2>
       <div class="bottomLine">
         <ul id="cart1">
           <li><span id="mainLine1"></span></li>
@@ -201,7 +200,7 @@
           <p>Total Cost</p>
           <p class="hideDelivery">Delivery Address</p>
           <p>Order Number</p>
-          <p class="hideDelivery">Approximate Delivery Time</span></p>
+          <p class="hideDelivery">Approximate Delivery Time</p>
         </div>
         <div class="col-7">
           <p><span id="totalCost1"></span></p>
@@ -209,12 +208,12 @@
           <p><span id="orderNum"></span></p>
           <p class="hideDelivery"><span id="deliveryTime"></span></p>
         </div>
-    </div>
-    <div class="aTag">
-      <a href="./index.html" id="aTag">Go Back to Landing Page</a>
+      </div>
+      <div class="aTag">
+        <a href="./index.html" class="aTag">Go Back to Landing Page</a>
+      </div>
     </div>
   </div>
-
 </body>
 
 </html>
