Fix errors in README.md + change in button text

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <p><span id="deliveryAddress"></span></p>
         </div>
       </div>
-      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Order another Pizza?</button>
+      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another Pizza?</button>
       <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
       <div class="aTag">
         <a href="./index.html" class="aTag">Go Back to Landing Page</a>
