Fix indentation issue

--- a/index.html
+++ b/index.html
@@ -166,11 +166,24 @@
 
     <div class="jumbotron cartView">
       <h2><span id="cName"></span>, your Cart items are ...<br></h2>
+
       <div class="bottomLine">
-        <ul id="cart">
-          <li><span id="mainLine"></span></li>
-        </ul>
+        <div class="row">
+          <div class="col-4">
+            <ul id="cart3">
+              <li><span id="mainLine3"></span></li>
+            </ul>
+          </div>
+          <div class="col-6">
+            <ul id="cart4">
+              <li><span id="mainLine4"></span></li>
+            </ul>
+          </div>
+        </div>
       </div>
+
+
+
       <div class="row">
         <div class="col-5 bold">
           <p>Total Cost</p>
@@ -181,7 +194,8 @@
           <p><span id="deliveryAddress"></span></p>
         </div>
       </div>
-      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another Pizza?</button>
+      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another
+        Pizza?</button>
       <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
       <div class="aTag">
         <a href="./index.html" class="aTag">Go Back to Landing Page</a>
@@ -191,9 +205,18 @@
     <div class="jumbotron finalView">
       <h2><span id="cName1"></span>, thank you for your Order!<br></h2>
       <div class="bottomLine">
-        <ul id="cart1">
-          <li><span id="mainLine1"></span></li>
-        </ul>
+        <div class="row">
+          <div class="col-5">
+            <ul id="cart1">
+              <li><span id="mainLine1"></span></li>
+            </ul>
+          </div>
+          <div class="col-7">
+            <ul id="cart2">
+              <li><span id="mainLine2"></span></li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-5 bold">
