--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
     </div>
 
-    <div class="jumbotron cartView">
+    <div class="jumbotron cartView"> <!-- staging view -->
       <h2><span id="cName"></span>, your Cart items are ...<br></h2>
       <div class="bottomLine">
         <div class="row">
@@ -178,61 +178,61 @@
               <li><span id="mainLine4"></span></li>
             </ul>
           </div>
-          </div>
+        </div>
       </div>
       <div class="row">
-          <div class="col-5 bold">
-            <p>Total Cost</p>
-            <p class="hideDelivery">Delivery Address</p>
-          </div>
-          <div class="col-6">
-            <p><span id="totalCost"></span></p>
-            <p><span id="deliveryAddress"></span></p>
-          </div>
+        <div class="col-5 bold">
+          <p>Total Cost</p>
+          <p class="hideDelivery">Delivery Address</p>
         </div>
-        <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another
-          Pizza?</button>
-        <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
-        <div class="aTag">
-          <a href="./index.html" class="aTag">Go Back to Landing Page</a>
+        <div class="col-6">
+          <p><span id="totalCost"></span></p>
+          <p><span id="deliveryAddress"></span></p>
         </div>
       </div>
-
-      <div class="jumbotron finalView">
-        <h2><span id="cName1"></span>, thank you for your Order!<br></h2>
-        <div class="bottomLine">
-          <div class="row">
-            <div class="col-5">
-              <ul id="cart1">
-                <li><span id="mainLine1"></span></li>
-              </ul>
-            </div>
-            <div class="col-6">
-              <ul id="cart2">
-                <li><span id="mainLine2"></span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-5 bold">
-            <p>Total Cost</p>
-            <p class="hideDelivery">Delivery Address</p>
-            <p>Order Number</p>
-            <p class="hideDelivery">Approximate Delivery Time</p>
-          </div>
-          <div class="col-6">
-            <p><span id="totalCost1"></span></p>
-            <p><span id="deliveryAddress1"></span></p>
-            <p><span id="orderNum"></span></p>
-            <p class="hideDelivery"><span id="deliveryTime"></span></p>
-          </div>
-        </div>
-        <div class="aTag">
-          <a href="./index.html" class="aTag">Go Back to Landing Page</a>
-        </div>
+      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another
+        Pizza?</button>
+      <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
+      <div class="aTag">
+        <a href="./index.html" class="aTag">Go Back to Landing Page</a>
       </div>
     </div>
+
+    <div class="jumbotron finalView">   <!-- final view -->
+      <h2><span id="cName1"></span>, thank you for your Order!<br></h2>
+      <div class="bottomLine">
+        <div class="row">
+          <div class="col-5">
+            <ul id="cart1">
+              <li><span id="mainLine1"></span></li>
+            </ul>
+          </div>
+          <div class="col-6">
+            <ul id="cart2">
+              <li><span id="mainLine2"></span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-5 bold">
+          <p>Total Cost</p>
+          <p class="hideDelivery">Delivery Address</p>
+          <p>Order Number</p>
+          <p class="hideDelivery">Approximate Delivery Time</p>
+        </div>
+        <div class="col-6">
+          <p><span id="totalCost1"></span></p>
+          <p><span id="deliveryAddress1"></span></p>
+          <p><span id="orderNum"></span></p>
+          <p class="hideDelivery"><span id="deliveryTime"></span></p>
+        </div>
+      </div>
+      <div class="aTag">
+        <a href="./index.html" class="aTag">Go Back to Landing Page</a>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
