--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </div>
 
     <div class="jumbotron cartView"> <!-- staging view -->
-      <h2><span id="cName"></span>, your Cart items are ...<br></h2>
+      <h2 class="h2Box"><span id="cName"></span>, your Cart items are ...<br></h2>
       <div class="bottomLine">
         <div class="row">
           <div class="col-5">
@@ -199,7 +199,7 @@
     </div>
 
     <div class="jumbotron finalView">   <!-- final view -->
-      <h2><span id="cName1"></span>, thank you for your Order!<br></h2>
+      <h2 class="h2Box"><span id="cName1"></span>, thank you for your Order!<br></h2>
       <div class="bottomLine">
         <div class="row">
           <div class="col-5">
