--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row second">
         <div class="col-5 bold">
           <p>Total Cost</p>
           <p class="hideDelivery">Delivery Address</p>
@@ -214,7 +214,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row second">
         <div class="col-5 bold">
           <p>Total Cost</p>
           <p class="hideDelivery">Delivery Address</p>
