--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
 
-      <form id="deliveryForm"> <!-- 1a. Form where delivery adddress should be entered (for patrons who prefer delivery). Form submit will take user to Pizza Order Block  -->
+      <form id="deliveryForm">  <!-- 1a. Form where delivery adddress should be entered (for patrons who prefer delivery). Form submit will take user to Pizza Order Block  -->
         <div class="form-group">
           <br><br>
           <label for="customerName">Name</label>
@@ -108,7 +108,7 @@
         <button type="submit" id="deliveryOption" class="btn btn-primary">CONTINUE FOR DELIVERY</button>
       </form>
 
-      <form id="carryOutForm"> <!-- 1b. Form where Name should be entered (for patrons who prefer carryout). Form submit will take user to Pizza Order Block  -->
+      <form id="carryOutForm">   <!-- 1b. Form where Name should be entered (for patrons who prefer carryout). Form submit will take user to Pizza Order Block  -->
         <br><br>
         <div class="form-group">
           <label for="customerName2">Name</label>
@@ -165,7 +165,7 @@
       </div>
     </div>
 
-    <div class="jumbotron cartView"> <!-- 3. Staging view -->
+    <div class="jumbotron cartView">   <!-- 3. Staging view -->
       <h2 class="h2Box"><span id="cName"></span>, your Cart items are ...<br></h2>
       <div class="bottomLine">
         <div class="row">
@@ -191,15 +191,14 @@
           <p><span id="deliveryAddress"></span></p>
         </div>
       </div>
-      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another
-        Pizza?</button>
+      <button type="submit" id="anotherPizzaID" class="btn btn-success">Would You like to Add another Pizza?</button>
       <button type="submit" id="finalizeOrder" class="btn btn-success">Click here to place Order</button>
       <div class="aTag">
         <a href="./index.html" class="aTag">Go Back to Landing Page</a>
       </div>
     </div>
 
-    <div class="jumbotron finalView">   <!-- 4. Final view -->
+    <div class="jumbotron finalView">    <!-- 4. Final view -->
       <h2 class="h2Box"><span id="cName1"></span>, thank you for your Order!<br></h2>
       <div class="bottomLine">
         <div class="row">
